# datahub_data_qa

./: .gitignore  README.md
datahub_code/: .pyproject.toml.swp  contract.yaml  dbt_test.yaml  ingest.sh  pipeline.yaml  postgres.yaml  postgres_recipe.yaml  pyproject.toml  test.txt  volume_assert.yaml  volume_contract.yaml
datahub_code/assertions/: postgres_assertion.yaml
datahub_code/sources/: dbt_test.yaml  dbt_test_2.yaml  postgres.yaml  postgres_2.yaml
dbt_datahub/: dbt_project.yml
dbt_datahub/models/: sources.yaml
dbt_datahub/models/product/: copy_products.sql
dbt_datahub/storage/: catalog.json  manifest.json  run_results.json
dbt_datahub/tests/: check_max_row.sql  check_max_row_2.sql  check_null_row.sql  check_row_count.sql  check_row_count_prod.sql
storage/: catalog.json  manifest.json
