[tool.poetry]
name = "datahub"
version = "0.1.0"
description = ""
authors = ["ZeroGxMax <21020554@vnu.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
acryl-datahub-gx-plugin = "0.14.1.12"
acryl-datahub = "^0.14.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
